// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders components/list/demo/component-token.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-divider css-var-test-id ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
      Default Size
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>,
  <div
    class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item css-var-test-id"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      aria-busy="false"
      aria-live="polite"
      class="ant-spin css-var-test-id"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items ant-list-container css-var-test-id"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <span
              class="ant-typography css-var-test-id"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Racing car sprays burning fuel into crowd.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <span
              class="ant-typography css-var-test-id"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Japanese princess to wed commoner.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <span
              class="ant-typography css-var-test-id"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Australian walks 100km after outback crash.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <span
              class="ant-typography css-var-test-id"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Man charged over missing wedding girl.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <span
              class="ant-typography css-var-test-id"
            >
              <mark>
                [ITEM]
              </mark>
            </span>
             Los Angeles battles huge wildfires.
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>,
  <div
    class="ant-divider css-var-test-id ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
      Small Size
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>,
  <div
    class="ant-list ant-list-sm ant-list-split ant-list-bordered ant-list-something-after-last-item css-var-test-id"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      aria-busy="false"
      aria-live="polite"
      class="ant-spin css-var-test-id"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items ant-list-container css-var-test-id"
        >
          <li
            class="ant-list-item"
          >
            Racing car sprays burning fuel into crowd.
          </li>
          <li
            class="ant-list-item"
          >
            Japanese princess to wed commoner.
          </li>
          <li
            class="ant-list-item"
          >
            Australian walks 100km after outback crash.
          </li>
          <li
            class="ant-list-item"
          >
            Man charged over missing wedding girl.
          </li>
          <li
            class="ant-list-item"
          >
            Los Angeles battles huge wildfires.
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>,
  <div
    class="ant-divider css-var-test-id ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
      Large Size
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>,
  <div
    class="ant-list ant-list-lg ant-list-split ant-list-bordered ant-list-something-after-last-item css-var-test-id"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      aria-busy="false"
      aria-live="polite"
      class="ant-spin css-var-test-id"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items ant-list-container css-var-test-id"
        >
          <li
            class="ant-list-item"
          >
            Racing car sprays burning fuel into crowd.
          </li>
          <li
            class="ant-list-item"
          >
            Japanese princess to wed commoner.
          </li>
          <li
            class="ant-list-item"
          >
            Australian walks 100km after outback crash.
          </li>
          <li
            class="ant-list-item"
          >
            Man charged over missing wedding girl.
          </li>
          <li
            class="ant-list-item"
          >
            Los Angeles battles huge wildfires.
          </li>
        </ul>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>,
  <div
    class="ant-divider css-var-test-id ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
      Meta
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>,
  <div
    class="ant-list ant-list-split css-var-test-id"
  >
    <div
      aria-busy="false"
      aria-live="polite"
      class="ant-spin css-var-test-id"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items ant-list-container css-var-test-id"
        >
          <li
            class="ant-list-item"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image css-var-test-id ant-avatar-css-var"
                >
                  <img
                    src="https://api.dicebear.com/7.x/miniavs/svg?seed=0"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="https://ant.design"
                  >
                    Ant Design Title 1
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image css-var-test-id ant-avatar-css-var"
                >
                  <img
                    src="https://api.dicebear.com/7.x/miniavs/svg?seed=1"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="https://ant.design"
                  >
                    Ant Design Title 2
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image css-var-test-id ant-avatar-css-var"
                >
                  <img
                    src="https://api.dicebear.com/7.x/miniavs/svg?seed=2"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="https://ant.design"
                  >
                    Ant Design Title 3
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image css-var-test-id ant-avatar-css-var"
                >
                  <img
                    src="https://api.dicebear.com/7.x/miniavs/svg?seed=3"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="https://ant.design"
                  >
                    Ant Design Title 4
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <div
    class="ant-divider css-var-test-id ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
      Vertical
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>,
  <div
    class="ant-list ant-list-vertical ant-list-split css-var-test-id"
  >
    <div
      aria-busy="false"
      aria-live="polite"
      class="ant-spin css-var-test-id"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items ant-list-container css-var-test-id"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image css-var-test-id ant-avatar-css-var"
                >
                  <img
                    src="https://api.dicebear.com/7.x/miniavs/svg?seed=0"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="https://ant.design"
                  >
                    Ant Design Title 1
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image css-var-test-id ant-avatar-css-var"
                >
                  <img
                    src="https://api.dicebear.com/7.x/miniavs/svg?seed=1"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="https://ant.design"
                  >
                    Ant Design Title 2
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image css-var-test-id ant-avatar-css-var"
                >
                  <img
                    src="https://api.dicebear.com/7.x/miniavs/svg?seed=2"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="https://ant.design"
                  >
                    Ant Design Title 3
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team
                </div>
              </div>
            </div>
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image css-var-test-id ant-avatar-css-var"
                >
                  <img
                    src="https://api.dicebear.com/7.x/miniavs/svg?seed=3"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="https://ant.design"
                  >
                    Ant Design Title 4
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team
                </div>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <div
    class="ant-divider css-var-test-id ant-divider-horizontal ant-divider-with-text ant-divider-with-text-start"
    role="separator"
  >
    <div
      class="ant-divider-rail ant-divider-rail-start"
    />
    <span
      class="ant-divider-inner-text"
    >
      Empty Text
    </span>
    <div
      class="ant-divider-rail ant-divider-rail-end"
    />
  </div>,
  <div
    class="ant-list ant-list-split css-var-test-id"
  >
    <div
      aria-busy="false"
      aria-live="polite"
      class="ant-spin css-var-test-id"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-empty-text"
        >
          <div
            class="css-var-test-id ant-empty ant-empty-normal"
          >
            <div
              class="ant-empty-image"
            >
              <svg
                height="41"
                viewBox="0 0 64 41"
                width="64"
                xmlns="http://www.w3.org/2000/svg"
              >
                <title>
                  No data
                </title>
                <g
                  fill="none"
                  fill-rule="evenodd"
                  transform="translate(0 1)"
                >
                  <ellipse
                    cx="32"
                    cy="33"
                    fill="#f5f5f5"
                    rx="32"
                    ry="7"
                  />
                  <g
                    fill-rule="nonzero"
                    stroke="#d9d9d9"
                  >
                    <path
                      d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                    />
                    <path
                      d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                      fill="#fafafa"
                    />
                  </g>
                </g>
              </svg>
            </div>
            <div
              class="ant-empty-description"
            >
              No data
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`renders components/list/demo/component-token.tsx extend context correctly 2`] = `
[
  "Warning: [antd: List] The \`List\` component is deprecated. And will be removed in next major version.",
]
`;

exports[`renders components/list/demo/drag-sorting.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-list ant-list-split"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item"
            style="cursor: move;"
          >
            <div
              aria-describedby="list-drag-sorting"
              aria-disabled="false"
              aria-roledescription="sortable"
              role="button"
              tabindex="0"
            >
              <span>
                0 Racing car sprays burning fuel into crowd.
              </span>
            </div>
          </li>
          <li
            class="ant-list-item"
            style="cursor: move;"
          >
            <div
              aria-describedby="list-drag-sorting"
              aria-disabled="false"
              aria-roledescription="sortable"
              role="button"
              tabindex="0"
            >
              <span>
                1 Japanese princess to wed commoner.
              </span>
            </div>
          </li>
          <li
            class="ant-list-item"
            style="cursor: move;"
          >
            <div
              aria-describedby="list-drag-sorting"
              aria-disabled="false"
              aria-roledescription="sortable"
              role="button"
              tabindex="0"
            >
              <span>
                2 Australian walks 100km after outback crash.
              </span>
            </div>
          </li>
          <li
            class="ant-list-item"
            style="cursor: move;"
          >
            <div
              aria-describedby="list-drag-sorting"
              aria-disabled="false"
              aria-roledescription="sortable"
              role="button"
              tabindex="0"
            >
              <span>
                3 Man charged over missing wedding girl.
              </span>
            </div>
          </li>
          <li
            class="ant-list-item"
            style="cursor: move;"
          >
            <div
              aria-describedby="list-drag-sorting"
              aria-disabled="false"
              aria-roledescription="sortable"
              role="button"
              tabindex="0"
            >
              <span>
                4 Los Angeles battles huge wildfires.
              </span>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <div
    id="list-drag-sorting"
    style="display: none;"
  >
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  </div>,
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-4"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />,
]
`;

exports[`renders components/list/demo/drag-sorting.tsx extend context correctly 2`] = `[]`;

exports[`renders components/list/demo/drag-sorting-handler.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-list ant-list-split"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <ul
          class="ant-list-items"
        >
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <button
              aria-describedby="list-drag-sorting-handler"
              aria-disabled="false"
              aria-roledescription="sortable"
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
              role="button"
              style="cursor: move;"
              tabindex="0"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="holder"
                  class="anticon anticon-holder"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="holder"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
             0 Racing car sprays burning fuel into crowd.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <button
              aria-describedby="list-drag-sorting-handler"
              aria-disabled="false"
              aria-roledescription="sortable"
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
              role="button"
              style="cursor: move;"
              tabindex="0"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="holder"
                  class="anticon anticon-holder"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="holder"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
             1 Japanese princess to wed commoner.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <button
              aria-describedby="list-drag-sorting-handler"
              aria-disabled="false"
              aria-roledescription="sortable"
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
              role="button"
              style="cursor: move;"
              tabindex="0"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="holder"
                  class="anticon anticon-holder"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="holder"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
             2 Australian walks 100km after outback crash.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <button
              aria-describedby="list-drag-sorting-handler"
              aria-disabled="false"
              aria-roledescription="sortable"
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
              role="button"
              style="cursor: move;"
              tabindex="0"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="holder"
                  class="anticon anticon-holder"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="holder"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
             3 Man charged over missing wedding girl.
          </li>
          <li
            class="ant-list-item ant-list-item-no-flex"
          >
            <button
              aria-describedby="list-drag-sorting-handler"
              aria-disabled="false"
              aria-roledescription="sortable"
              class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
              role="button"
              style="cursor: move;"
              tabindex="0"
              type="button"
            >
              <span
                class="ant-btn-icon"
              >
                <span
                  aria-label="holder"
                  class="anticon anticon-holder"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="holder"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                    />
                  </svg>
                </span>
              </span>
            </button>
             4 Los Angeles battles huge wildfires.
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <div
    id="list-drag-sorting-handler"
    style="display: none;"
  >
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  </div>,
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-6"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />,
]
`;

exports[`renders components/list/demo/drag-sorting-handler.tsx extend context correctly 2`] = `[]`;

exports[`renders components/list/demo/grid-drag-sorting.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-list ant-list-split ant-list-grid"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-row"
          style="margin-left: -8px; margin-right: -8px;"
        >
          <div
            style="width: 25%; max-width: 25%;"
          >
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                aria-describedby="list-grid-drag-sorting"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="ant-list-item"
                role="button"
                style="cursor: move;"
                tabindex="0"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 25%; max-width: 25%;"
          >
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                aria-describedby="list-grid-drag-sorting"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="ant-list-item"
                role="button"
                style="cursor: move;"
                tabindex="0"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 2
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 25%; max-width: 25%;"
          >
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                aria-describedby="list-grid-drag-sorting"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="ant-list-item"
                role="button"
                style="cursor: move;"
                tabindex="0"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 3
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 25%; max-width: 25%;"
          >
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                aria-describedby="list-grid-drag-sorting"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="ant-list-item"
                role="button"
                style="cursor: move;"
                tabindex="0"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 4
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 25%; max-width: 25%;"
          >
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                aria-describedby="list-grid-drag-sorting"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="ant-list-item"
                role="button"
                style="cursor: move;"
                tabindex="0"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 5
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 25%; max-width: 25%;"
          >
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                aria-describedby="list-grid-drag-sorting"
                aria-disabled="false"
                aria-roledescription="sortable"
                class="ant-list-item"
                role="button"
                style="cursor: move;"
                tabindex="0"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        Title 6
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="list-grid-drag-sorting"
    style="display: none;"
  >
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  </div>,
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-0"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />,
]
`;

exports[`renders components/list/demo/grid-drag-sorting.tsx extend context correctly 2`] = `[]`;

exports[`renders components/list/demo/grid-drag-sorting-handler.tsx extend context correctly 1`] = `
Array [
  <div
    class="ant-list ant-list-split ant-list-grid"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-row"
          style="margin-left: -8px; margin-right: -8px;"
        >
          <div
            style="width: 25%; max-width: 25%;"
          >
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        <button
                          aria-describedby="list-grid-drag-sorting-handler"
                          aria-disabled="false"
                          aria-roledescription="sortable"
                          class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                          role="button"
                          style="cursor: move;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              aria-label="holder"
                              class="anticon anticon-holder"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="holder"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                         Title 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 25%; max-width: 25%;"
          >
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        <button
                          aria-describedby="list-grid-drag-sorting-handler"
                          aria-disabled="false"
                          aria-roledescription="sortable"
                          class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                          role="button"
                          style="cursor: move;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              aria-label="holder"
                              class="anticon anticon-holder"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="holder"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                         Title 2
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 25%; max-width: 25%;"
          >
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        <button
                          aria-describedby="list-grid-drag-sorting-handler"
                          aria-disabled="false"
                          aria-roledescription="sortable"
                          class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                          role="button"
                          style="cursor: move;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              aria-label="holder"
                              class="anticon anticon-holder"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="holder"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                         Title 3
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 25%; max-width: 25%;"
          >
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        <button
                          aria-describedby="list-grid-drag-sorting-handler"
                          aria-disabled="false"
                          aria-roledescription="sortable"
                          class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                          role="button"
                          style="cursor: move;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              aria-label="holder"
                              class="anticon anticon-holder"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="holder"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                         Title 4
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 25%; max-width: 25%;"
          >
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        <button
                          aria-describedby="list-grid-drag-sorting-handler"
                          aria-disabled="false"
                          aria-roledescription="sortable"
                          class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                          role="button"
                          style="cursor: move;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              aria-label="holder"
                              class="anticon anticon-holder"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="holder"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                         Title 5
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="width: 25%; max-width: 25%;"
          >
            <div
              class="ant-col"
              style="padding-left: 8px; padding-right: 8px; flex: 1 1 auto;"
            >
              <div
                class="ant-list-item"
              >
                <div
                  class="ant-card ant-card-bordered"
                >
                  <div
                    class="ant-card-head"
                  >
                    <div
                      class="ant-card-head-wrapper"
                    >
                      <div
                        class="ant-card-head-title"
                      >
                        <button
                          aria-describedby="list-grid-drag-sorting-handler"
                          aria-disabled="false"
                          aria-roledescription="sortable"
                          class="ant-btn ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                          role="button"
                          style="cursor: move;"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <span
                              aria-label="holder"
                              class="anticon anticon-holder"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="holder"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M300 276.5a56 56 0 1056-97 56 56 0 00-56 97zm0 284a56 56 0 1056-97 56 56 0 00-56 97zM640 228a56 56 0 10112 0 56 56 0 00-112 0zm0 284a56 56 0 10112 0 56 56 0 00-112 0zM300 844.5a56 56 0 1056-97 56 56 0 00-56 97zM640 796a56 56 0 10112 0 56 56 0 00-112 0z"
                                />
                              </svg>
                            </span>
                          </span>
                        </button>
                         Title 6
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    id="list-grid-drag-sorting-handler"
    style="display: none;"
  >
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  </div>,
  <div
    aria-atomic="true"
    aria-live="assertive"
    id="DndLiveRegion-2"
    role="status"
    style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
  />,
]
`;

exports[`renders components/list/demo/grid-drag-sorting-handler.tsx extend context correctly 2`] = `[]`;

exports[`renders components/list/demo/infinite-load.tsx extend context correctly 1`] = `
<div
  id="scrollableDiv"
  style="height: 400px; overflow: auto; padding: 0px 16px; border: 1px solid rgba(140, 140, 140, 0.35);"
>
  <div
    class="infinite-scroll-component__outerdiv"
  >
    <div
      class="infinite-scroll-component"
      style="height: auto; overflow: auto; -webkit-overflow-scrolling: touch;"
    >
      <div
        class="ant-list ant-list-split css-var-test-id"
      >
        <div
          aria-busy="false"
          aria-live="polite"
          class="ant-spin css-var-test-id"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-list-empty-text"
            >
              <div
                class="css-var-test-id ant-empty ant-empty-normal"
              >
                <div
                  class="ant-empty-image"
                >
                  <svg
                    height="41"
                    viewBox="0 0 64 41"
                    width="64"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <title>
                      No data
                    </title>
                    <g
                      fill="none"
                      fill-rule="evenodd"
                      transform="translate(0 1)"
                    >
                      <ellipse
                        cx="32"
                        cy="33"
                        fill="#f5f5f5"
                        rx="32"
                        ry="7"
                      />
                      <g
                        fill-rule="nonzero"
                        stroke="#d9d9d9"
                      >
                        <path
                          d="M55 12.8 44.9 1.3Q44 0 42.9 0H21.1q-1.2 0-2 1.3L9 12.8V22h46z"
                        />
                        <path
                          d="M41.6 16c0-1.7 1-3 2.2-3H55v18.1c0 2.2-1.3 3.9-3 3.9H12c-1.7 0-3-1.7-3-3.9V13h11.2c1.2 0 2.2 1.3 2.2 3s1 2.9 2.2 2.9h14.8c1.2 0 2.2-1.4 2.2-3"
                          fill="#fafafa"
                        />
                      </g>
                    </g>
                  </svg>
                </div>
                <div
                  class="ant-empty-description"
                >
                  No data
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-skeleton ant-skeleton-with-avatar ant-skeleton-active css-var-test-id"
      >
        <div
          class="ant-skeleton-header"
        >
          <span
            class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
          />
        </div>
        <div
          class="ant-skeleton-section"
        >
          <h3
            class="ant-skeleton-title"
            style="width: 50%;"
          />
          <ul
            class="ant-skeleton-paragraph"
          >
            <li />
          </ul>
        </div>
      </div>
      <div
        style="height: 1px;"
      />
    </div>
  </div>
</div>
`;

exports[`renders components/list/demo/infinite-load.tsx extend context correctly 2`] = `
[
  "Warning: [antd: List] The \`List\` component is deprecated. And will be removed in next major version.",
]
`;
